--- a/Playbooks/webstack/main1.yml
+++ b/Playbooks/webstack/main1.yml
@@ -1,5 +1,5 @@
 ---
-- hosts : ubuntuServer
+- hosts : {{ hosts }}
   become : yes
   become_user : root
   remote_user : aditi
@@ -11,4 +11,4 @@
      - debug : var=test_var
      - debug: var=hostvars[inventory_hostname].ansible_all_ipv4_addresses
      - debug : msg="{{ hostvars['10.0.2.6'].ansible_local.pref }}"
-       when: ansible_os_family == "Debian"
+       when: ansible_os_family == "{{ os_family }}"
